# Mlops_Brain_Turmo_Detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MLproject  README.md  data.yaml  docker-compose.yml  pyproject.toml  python_env.yaml  requirements.backend.txt  requirements.frontend.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
configs/: data_test.yaml
docker/: Dockerfile.backend  Dockerfile.frontend  build_and_run.bat  docker-compose.yml
docs/: api_reference.md  docker_deployment.md  installation.md  mlflow_guide.md  model_serving.md  pipeline.md  project_structure.md
evaluation_results_onnx/: evaluation_report.txt  metrics.json
evaluation_results_pt/: evaluation_report.txt  evaluation_results.json
models/train/: args.yaml  results.csv
models/train/versions/best 1.0.0/: metadata.json
notebooks/: 02_Model_Experiments_Comparison.ipynb  06_Quick_Demo.ipynb
scripts/: migrate_registry.py
src/: api.py  app.py  config.py  evaluate_onnx.py  export_onnx.py  model.py
src/deployment/: deploy_model.py  register_model.py
src/evaluation/: evaluate.py  evaluate_onnx.py  evaluate_pt.py
src/monitoring/: monitor_model.py  track_metrics.py
src/pipeline/: mlops_pipeline.py  pipeline.py
src/servering/: api.py  app.py  mlflow_serve.py  services.py
src/training/: train.py
src/utils/: mlflow_dashboard.py  model.py  onnx_export.py  yolo_wrapper.py
tests/: conftest.py  mocks.py
tests/e2e/: test_api_prediction.py  test_deployment.py
tests/integration/: test_api.py  test_yolo_wrapper_config.py
tests/unit/: test_model.py
(+1 files in other folders)
