[project]
name = "mlops-brain-turmo"
version = "0.1.0"
description = "Brain Tumor Detection MLOps Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=11.0.0",
    "psutil>=7.1.3",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "starlette>=0.49.3",
    "streamlit>=1.32.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.229",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter-client>=8.6.0",
    "pytest>=7.0.0",
    "dvc>=3.0.0",
    "dvc-gdrive>=3.0.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]

